--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
@@ -19,10 +20,10 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "sequelize": "5.21"
   },
   "devDependencies": {
     "nodemon": "^2.0.13",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^6.2.0"
   }
 }
